# diode

./: .build.yml  .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  SLOW_REFERENCE_BUGS.md  build-wheels.sh  peru.yaml  pyproject.toml  repair-macos-wheels.sh  repair-wheels.sh  setup.py
bindings/python/: CMakeLists.txt  diode.cpp
examples/: CMakeLists.txt  generate_alpha_shape.cpp  generate_periodic_alpha_shape.cpp  generate_weighted_alpha_shape.cpp
include/diode/: diode.h  diode.hpp
tests/: test_alpha_arrays.py  test_alpha_distribution_samples.py  test_alpha_fast_vs_slow.py  test_delaunay.py  test_simple.py
