[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "diode"
version = "1.1.3"

authors = [ { name = "Dmitriy Morozov",  email = "dmitriy@mrzv.org" } ]
description= "alpha shape generator using CGAL"
readme = "README.rst"
license = "GPL-3.0-or-later"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy>=2",
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/mrzv/diode"
Repository = "https://github.com/mrzv/diode.git"
Issues = "https://github.com/mrzv/diode/issues"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" },
              { file = "bindings/**" },
              { file = "include/**" },
              { file = "CMakeLists.txt" }]

[dependency-groups]
test = [
    "numpy>=2",
    "pytest>=8.4.2",
]
